# scheduler

./: .gitignore  Cargo.toml
src/: mod.rs
src/.mock/: package-lock.json  package.json  schedule.json  script.js
src/.mock/plan/: plan1.json  plan10.json  plan11.json  plan12.json  plan13.json  plan14.json  plan15.json  plan16.json  plan17.json  plan18.json  plan19.json  plan2.json  plan20.json  plan21.json  plan22.json  plan23.json  plan24.json  plan25.json  plan26.json  plan27.json  plan28.json  plan29.json  plan3.json  plan30.json  plan31.json  plan32.json  plan33.json  plan34.json  plan35.json  plan36.json  plan37.json  plan38.json  plan39.json  plan4.json  plan40.json  plan41.json  plan42.json  plan43.json  plan44.json  plan45.json  (+30 more)
src/.mock/users/: user1.json  user10.json  user2.json  user3.json  user4.json  user5.json  user6.json  user7.json  user8.json  user9.json
src/database/: mod.rs
src/lib/data/: db.rs  mod.rs  model.rs
src/lib/domain/: mod.rs
src/lib/domain/availability/: mod.rs
src/lib/domain/availability/field/: availability_id.rs  days.rs  id.rs  mod.rs  name.rs  time.rs  week_id.rs  weekly_id.rs
src/lib/domain/plan/: mod.rs
src/lib/domain/plan/field/: day.rs  mod.rs  name.rs  time.rs  user_id.rs
src/lib/domain/user/: mod.rs
src/lib/domain/user/field/: active.rs  admin.rs  employee_id.rs  max_days.rs  min_days.rs  mod.rs  name.rs  role_primary.rs  role_secondary.rs  user_id.rs  vast.rs
src/lib/domain/week/: mod.rs
src/lib/service/: lib.rs  mod.rs  scheduler.rs  setup.rs  things.rs
src/lib/web/: mod.rs
(+7 files in other folders)
