[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# This is your library
[lib]
path = "src/mod.rs"

# This is your binary
[[bin]]
name = "app"
path = "src/bin/app.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono ={ version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
serde_derive = "1.0.196"
serde = { version = "1.0.196", features = ["derive"] }
derive_more = "0.99"
rand = "0.8.5"
uuid = "1.7.0"
thiserror = "1.0.56"