[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"


[dependencies]
chrono ={ version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
serde_derive = "1.0.196"
serde = { version = "1.0.196", features = ["derive"] }
derive_more = "0.99"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
thiserror = "1.0.56"
enum-iterator = "1.5.0"